Added database and added code for login forms

--- a/LoginForm.resx
+++ b/LoginForm.resx
@@ -118,30 +118,30 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="pbUsericon.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAIwAAAB9CAYAAABwDouCAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8
-        AAAEhUlEQVR4Xu3czVEjMRCG4T1Acd4QSGEzIAVCIARCIIQNgRDIgBAIgQzIwNu9JVdR4m0wxh6pW9/h
-        uXwYe+gW86PR+NdutxM5GIYiEQxFIhiKRDAUiWAoEsFQJIKhSARDkQiGIhEMRSIYikQwFIlgKBLBUCSC
-        oUgEQ5EIhiIRDEUiGIpEMBSJYCgSwVAkgqFIBEORCIYiEQxFIhiu5OLi4tb8Nc9mF/Cf+Wtu6T1WgmF1
-        V1dXv635D+bN0AD5jP/Og78HvXd1GFZmzb5vTafB8B3+Hvf0GZVhWFHbq3x22DnW80p7Gwyruby8/GON
-        PcVeJfLmn0GfXQ2GlWwwWPaWGDQYVtEOQ69dY8/ptfrhCcMqrIFPXUO38ETbUgWGFVjjfH6FGrqFsvM1
-        GFZgTdvyUNR7pW2qAMPsrGF3XQNHuKNtyw7D7KxZL13zRnihbcsOw8ysUddd40a6pm3MDMPMrEkzHI72
-        yh2WMMzMmvTYNW2kR9rGzDDMzJp0jvtFx3qmbcwMw8y8SV3TRtKAmR00bah++7LDMDNr0sgJu165CTwM
-        M7Mm6ZB0Rhhm5k3qmjaSBszsrEm+VpeaN8IDbWNmGGZmTRp5l7pX7q41hpm1RVPUvM1VXEyFYXbWrBEL
-        p3olF1JhmJ0166Zr3gg3tG3ZYViBNUwLqM4AwwqsaSP3MiX3Lg7DKqxxWgR+YhhW0a6Ytngmae9Nj5kk
-        1x5ko+aenB5kK8KaucUqvJKLvnsYVuQN7Rp8SksMFodhVe3wdMrL7dcVDkPvYVhZOxH2b5OiAfAdf6uf
-        4BIMV2AN98dRjlkw7r9T7vGRQ2G4krbH8fMbHwj0AJxn/rO7FfcoPQxFIhiKRDAUiWAoEsGwAjtJ9asg
-        v3z2G5Bnv3vsn9E+yz+z7FUUhpm1xtGTA97MkzfS39PQ5blvQ7llDhhm5M1pTeob1/OB8+PF2f4e7b3o
-        M94rNXAwzKTNoxzSuJ4ve/g/v2K+3PP4a9pr/XeOWTLxVGEeB8MsrAn+X37K9S6+NyD02mP4tqZ+9ATD
-        DKzwdN6QRdrvjcFwZu0QNMN32P3US8ZDFIazKjRY9tINGgxnVHCw7KUaNBjOyAvbFbqSF/qbZ4ThbKyg
-        mU9wD5XiRBjDmVght1jAPYvp1wZjOAsroE+Wbflc0Wj+t059HwrDWVjxjpnBzW7qJycxnIEVboZvYBhl
-        2ntPGM7AinbKKflspv1uPAxHs4KtvHfZm3Ivg+FoVqwVLqO/MuVlNoYjtRldKuByZpwBxnAkK9RK8y5f
-        mW5eBsORrEgrXkpHprvExnAkKNrS+vqMhuEoViBdHX001dUShqNYce67YonVhGo1CoajWHF0Of3RVJfX
-        GI5ixVl5djcy1awvhqNYcVa6M32oN6rVKBiOAsUS09dpJAxHoWKJBkyIiiUaMCErzvunDaWhWo2CoUgE
-        Q5EIhiIRDEUiGIpEMBSJYCgSwVAkgqFIBEORCIYiEQxFIhiKRDAUiWAoEsFQJIKhSARDkQiGIhEMRSIY
-        ikQwFIlgKBLBUCSCoUgEQxG2+/UPpJ3nbHN3QdAAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAIwAAAB9CAYAAABwDouCAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAASFSURBVHhe7dzN
+        USMxEIbhPUBx3hBIYTMgBUIgBEIghA2BEMiAEAiBDMjA270lV1HibTDGHqlb3+G5fBh76Bbzo9H41263
+        EzkYhiIRDEUiGIpEMBSJYCgSwVAkgqFIBEORCIYiEQxFIhiKRDAUiWAoEsFQJIKhSARDkQiGIhEMRSIY
+        ikQwFIlgKBLBUCSCoUgEQ5EIhiIRDEUiGK7k4uLi1vw1z2YX8J/5a27pPVaCYXVXV1e/rfkP5s3QAPmM
+        /86Dvwe9d3UYVmbNvm9Np8HwHf4e9/QZlWFYUdurfHbYOdbzSnsbDKu5vLz8Y409xV4l8uafQZ9dDYaV
+        bDBY9pYYNBhW0Q5Dr11jz+m1+uEJwyqsgU9dQ7fwRNtSBYYVWON8foUauoWy8zUYVmBN2/JQ1HulbaoA
+        w+ysYXddA0e4o23LDsPsrFkvXfNGeKFtyw7DzKxR113jRrqmbcwMw8ysSTMcjvbKHZYwzMya9Ng1baRH
+        2sbMMMzMmnSO+0XHeqZtzAzDzLxJXdNG0oCZHTRtqH77ssMwM2vSyAm7XrkJPAwzsybpkHRGGGbmTeqa
+        NpIGzOysSb5Wl5o3wgNtY2YYZmZNGnmXulfurjWGmbVFU9S8zVVcTIVhdtasEQuneiUXUmGYnTXrpmve
+        CDe0bdlhWIE1TAuozgDDCqxpI/cyJfcuDsMqrHFaBH5iGFbRrpi2eCZp702PmSTXHmSj5p6cHmQrwpq5
+        xSq8kou+exhW5A3tGnxKSwwWh2FV7fB0ysvt1xUOQ+9hWFk7EfZvk6IB8B1/q5/gEgxXYA33x1GOWTDu
+        v1Pu8ZFDYbiStsfx8xsfCPQAnGf+s7sV9yg9DEUiGIpEMBSJYCgSwbACO0n1qyC/fPYbkGe/e+yf0T7L
+        P7PsVRSGmbXG0ZMD3syTN9Lf09DluW9DuWUOGGbkzWlN6hvX84Hz48XZ/h7tvegz3is1cDDMpM2jHNK4
+        ni97+D+/Yr7c8/hr2mv9d45ZMvFUYR4HwyysCf5ffsr1Lr43IPTaY/i2pn70BMMMrPB03pBF2u+NwXBm
+        7RA0w3fY/dRLxkMUhrMqNFj20g0aDGdUcLDspRo0GM7IC9sVupIX+ptnhOFsrKCZT3APleJEGMOZWCG3
+        WMA9i+nXBmM4CyugT5Zt+VzRaP63Tn0fCsNZWPGOmcHNbuonJzGcgRVuhm9gGGXae08YzsCKdsop+Wym
+        /W48DEezgq28d9mbci+D4WhWrBUuo78y5WU2hiO1GV0q4HJmnAHGcCQr1ErzLl+Zbl4Gw5GsSCteSkem
+        u8TGcCQo2tL6+oyG4ShWIF0dfTTV1RKGo1hx7rtiidWEajUKhqNYcXQ5/dFUl9cYjmLFWXl2NzLVrC+G
+        o1hxVrozfag3qtUoGI4CxRLT12kkDEehYokGTIiKJRowISvO+6cNpaFajYKhSARDkQiGIhEMRSIYikQw
+        FIlgKBLBUCSCoUgEQ5EIhiIRDEUiGIpEMBSJYCgSwVAkgqFIBEORCIYiEQxFIhiKRDAUiWAoEsFQJIKh
+        SARDEbb79Q+knedsc3dB0AAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
